# programmazione_laboratorio

./: README.md  pyproject.toml
DOCS/: duplicated.txt  file.txt
es_dispensa/: lst_comprehension.py
esercizi_2026_02_27/: es1_formate_data.py  es2_print_pow.py  es4_contains.py  es5_is_prime.py  es6_sum_n_numbers.py  es7_factorial.py  es8_triangle.py  es9_contains_vocals.py
esercizi_2026_03_02/: es1.py  es10.py  es2.py  es3.py  es5.py  es6.py  es7.py  es9.py
esercizi_lez5/: canguro.py
esercizi_lez5/es_1_3/: teacher.py
lab_1/DOCS/: nuovo.txt  shampo.csv  word.csv
lab_1/es_lez8/: es_lez8.ipynb
lab_1/esercitazioni/: GlobalLandTemperaturesByMajorCity.csv  data.csv  esercitazione_1.py  esercitazione_2.py  simulazione_esame_1.py  simulazione_esame_2.py  simulazione_esame_2_pythonic.py  simulazione_esame_3.py  simulazione_esame_4.py  simulazione_esame_5.py
lab_1/esercizi_2026_02_27/: es3_pari_dispari.py
lab_1/esercizi_2026_03_02/: es8.py
lab_1/lezione_2/: es4.py
lab_1/lezione_3/: csv_file.py
lab_2/: lab_2_jupiter_notebook.ipynb  mymodule.py  numpy.ipynb
lab_2/lezione_1/: 1.3_NumPy.ipynb  1.4_Esercizi_lez_1.ipynb
lab_2/lezione_2/: 2.1_NumPy2.ipynb  2.2_Esercizi_lez_2.ipynb  emissioni.txt
lab_2/lezione_3/: 3.1_Pandas_1.ipynb  3.2_Pandas_2.ipynb  3.3_Matplotlib.ipynb  3.5_Esercizi_lez_3.ipynb
lab_2/lezione_5/: 5.1_Distribuzioni_campionamento.ipynb  5.3_Seaborn.ipynb  5.4_Esercizi_lez_5.ipynb
lab_2/lezione_6/: 6.0_Pandas3.ipynb  6.4_Esericzi.ipynb
lab_2/lezione_7/: 7.1_Scipy.ipynb  7.2_Regressione.ipynb  7.3_pred_model.ipynb  (+1 more)
(+18 files in other folders)
